** with new derived reference `terminatedOccurrenceArgument : Expression`
- https://github.com/eclipse-syson/syson/issues/946[#946] [libraries] All standard libraries have been updated to comply with the SysML Beta 2.3 specification.
- https://github.com/eclipse-syson/syson/issues/982[#982] [metamodel] `Membership#isDistinguishableFrom` derived attribute has been implemented.

=== New features

- https://github.com/eclipse-syson/syson/issues/977[#977] [validation] SysON now implements the constraints (a.k.a. validation rules) from the SysMLv2 specification.
The _Validation_ view show the results of the execution of the constraints on your models.
- https://github.com/eclipse-syson/syson/issues/987[#987] Implementation of drag and drop in Explorer view.


== v2025.1.0

=== Shapes

- Improve support for libraries in the explorer

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in the import module to make it more generic:
* Delete the `AstConstants` class: Constants have been split across several classes.
* Delete the `LogBook` class (no longer used).
* Replace `AstContainmentReferencePart` with `ContainmentReferenceHandler`.
* Replace `AstObjectParser` with `EAttributeHandler`.
* Replace `AstWeakReferenceParser` with `NonContainmentReferenceHandler`.
* Delete `ReferenceHelper` (no longer used).
* Delete `SysMLUploadDocumentReportProvider` as it is not functional.
* Most components used in the transformation now require a `MessageReporter` instance to collect transformation messages.
- https://github.com/eclipse-syson/syson/issues/887[#887] [explorer] Rework the structure of standard and user libraries in the explorer:
* Rename `StandardLibraryDirectory` to `LibrariesDirectory`.
* Rename `ReferencedLibraryDirectory` to `UserLibrariesDirectory`.